# cw-videochat

Course-work-videochat-backend/: .gitignore  CMakeLists.txt  main.cpp
Course-work-videochat-backend/sql/: 001_initial.sql  database.sqlite
Course-work-videochat-backend/src/: App.cpp  AppComponent.hpp
Course-work-videochat-backend/src/controller/: RoomController.hpp
Course-work-videochat-backend/src/db/: DbClient.hpp
Course-work-videochat-backend/src/dto/: OfferDto.hpp
Course-work-videochat-backend/src/service/: RoomService.hpp
Course-work-videochat-frontend/: package-lock.json  package.json
Course-work-videochat-frontend/src/: _api.js  global.css
Course-work-videochat-frontend/src/pages/: _layout.svelte  index.svelte
Course-work-videochat-frontend/src/pages/room/: [room_id].svelte
